# ferriskey-sdk-rs

./: .gitignore  Cargo.toml  Justfile  README.md  context7.json
.github/workflows/: ci.yml  release.yml
crates/ferriskey-sdk/: Cargo.toml  build.rs
crates/ferriskey-sdk/src/: cli.rs  client.rs  config.rs  contract.rs  encoding.rs  error.rs  lib.rs  transport.rs
crates/ferriskey-sdk/tests/: bdd.rs  cli_smoke.proptest-regressions  cli_smoke.rs  prism_contract.rs  request_response_pipeline.rs  sdk_contract.rs
crates/ferriskey-sdk/tests/support/: mod.rs
docs/: openai.json
features/: cli-invocation.feature  prism-contract.feature
specs/2026-03-17-01-ferriskey-sdk-cli/: design.md  tasks.md
specs/2026-03-17-01-ferriskey-sdk-cli/features/: prism-contract.feature  sdk-contract.feature
