[package]
name = "ferriskey-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FerrisKey Rust SDK crate"

[lints]
workspace = true

[dependencies]
clap.workspace = true
dirs.workspace = true
hpx = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml.workspace = true
tower = { workspace = true, features = ["util"] }

[dev-dependencies]
cucumber = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[build-dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }

[[test]]
name = "bdd"
harness = false
